src/test/deca/context/valid/methodCall-simpleCall.deca
class A {
    int coco;

    void manger() {
    }
}

{
    A a = new A();
    a.manger();
}