src/test/deca/context/invalid/method-parmSameNameVar.deca
class A{
	void c(int a) {
		boolean a;
	}
}
